--- a/cartac_web/composer.json
+++ b/cartac_web/composer.json
@@ -12,7 +12,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2"
+        "laravel/ui": "^3.2",
+        "mpociot/documentarian": "dev-master as 0.4.0",
+        "mpociot/laravel-apidoc-generator": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
