--- a/cartac_web/composer.json
+++ b/cartac_web/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "mpociot/documentarian": "dev-master as 0.4.0",
-        "mpociot/laravel-apidoc-generator": "dev-master"
+        "mpociot/laravel-apidoc-generator": "dev-master",
+        "emcconville/google-map-polyline-encoding-tool": ">=1.2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
